<resources>
    <string name="app_name">OverYears-papers</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="forget_password">忘记密码?</string>
    <string name="prompt_phone">请输入您的手机号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="phone">手机</string>
    <string name="password">密码</string>

    <string name="error_invalid_phone_number">请输入正确的手机号</string>
    <string name="error_invalid_password">密码格式错误,请重新输入.</string>
    <string name="error_invalid_captcha">验证码输入错误.</string>
    <string name="error_invalid_message">短信验证码错误.</string>
    <string name="error_incorrect_password">密码输入错误,请重新输入.</string>
    <string name="error_field_required">%s不能为空,请正确填写.</string>
    <string name="prompt_captcha">请输入验证码</string>
    <string name="i_agree">我同意</string>
    <string name="send_verify_msg">获取验证码</string>
    <string name="captcha">验证码</string>

    <string name="double_click_exit_app">请再点击一次返回,退出程序</string>
</resources>
